Revert "take into account SecurityManager checks"
This reverts commit 1694f3a02cf470ac3aaef5d8cdeb0a40c0c66b12.